<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_analytics" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />
</menu>
